--- a/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
+++ b/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="calendar">
+                <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalender
+            </NavLink>
+        </div>
     </nav>
 </div>
 
