Update calendar page to display month name and year instead of number #27

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -34,7 +34,7 @@ else
     private ApplicationCalendar calendar;
     private List<DayPeriod> dayPeriods;
     private List<Job> jobs;
-    private string currentMonth = DateTime.Now.Month.ToString();
+    private string currentMonth = DateTime.Now.ToString("MMM yyy");
 
     private Guid selectedCalendarId;
 
