Uncommented program.cs and renamed method to import users since more imports will be required

--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -45,7 +45,7 @@
 		{
 			using var stream = file.OpenReadStream();
 
-			await FileService.ImportFile(stream);
+			await FileService.ImportUsers(stream);
 		}
 	}
 }
