Add linking of permissions to users and show message on screen to let the user know upload was successfull #45

--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -46,6 +46,8 @@
 			using var stream = file.OpenReadStream();
 
 			await FileService.ImportUsers(stream);
+
+			errorMessage = "File uploaded succesfully!";
 		}
 	}
 }
