Add type validation on data inside excel #45

--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -45,9 +45,7 @@
 		{
 			using var stream = file.OpenReadStream();
 
-			await FileService.ImportUsers(stream);
-
-			errorMessage = "File uploaded succesfully!";
+			errorMessage = await FileService.ImportUsers(stream);
 		}
 	}
 }
