Create method getstaff

--- a/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
@@ -87,5 +87,19 @@
         }
     }
 
-    
+    private void GetStaff(ChangeEventArgs e)
+    {
+        if (Personel.Count > 0)
+        {
+            Personel.Clear();
+        }
+
+        foreach(var user in _users)
+        {
+            if (user.Permissions.Any(p => p.Name == e.Value?.ToString()))
+            {
+                Personel.Add(user);
+            }
+        }
+    }
 }
