Sort calendar dates in calendar razor page #27

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -94,6 +94,7 @@ else
         if (calendarResult.IsSucces)
         {
             calendar = calendarResult.Value;
+            calendar.Days = calendar.Days.OrderBy(day => day.Date).ToList();
             await GetUniquePeriodNames();
         }
 
