--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -9,7 +9,7 @@
 
 <form @onsubmit="HandleFile">
 	<InputFile OnChange="LoadFile" />
-	<button type="submit">Import file</button>
+	<button type="submit" disabled="@isLoading">Import file</button>
 </form>
 
 
@@ -21,6 +21,7 @@
 @code {
 	private IBrowserFile file;
 	private string errorMessage;
+	private bool isLoading = false;
 
 	private void LoadFile(InputFileChangeEventArgs e)
 	{
@@ -32,10 +33,11 @@
 		if (file == null)
 		{
 			errorMessage = "Please select a file.";
+			return;
 		}
 		var extension = Path.GetExtension(file.Name);
 
-		if (!extension.Equals(".xlsx", StringComparison.OrdinalIgnoreCase))
+		if (!(extension.Equals(".xlsx", StringComparison.OrdinalIgnoreCase) || (extension.Equals(".xls", StringComparison.OrdinalIgnoreCase))))
 		{
 			errorMessage = "Please upload an excel file!";
 			return;
@@ -44,8 +46,10 @@
 		if (file != null)
 		{
 			using var stream = file.OpenReadStream();
+			isLoading = true;
 
 			errorMessage = await FileService.ImportUsers(stream);
+			isLoading = false;
 		}
 	}
 }
