Add a downloadable template to see how to upload members and permissions to the database #45

--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -12,6 +12,8 @@
 	<button type="submit" disabled="@isLoading">Import file</button>
 </form>
 
+<a href="templates/template.xlsx" download>Download template</a>
+
 
 @if (!string.IsNullOrEmpty(errorMessage))
 {
