Add sorting on dayperiodnames #133

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -163,7 +163,7 @@ else
         var dayPeriods = await DayPeriodService.GetAllAsync();
         if (dayPeriods.IsSucces)
         {
-            periodNames = dayPeriods.Value.Select(p => p.Name).Distinct().ToList();
+            periodNames = dayPeriods.Value.Select(p => p.Name).Distinct().OrderBy(name => name).ToList();
         }
     }
 }
