--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -1,5 +1,29 @@
-﻿<h3>CalendarList</h3>
+﻿@page "/calendarslist"
+@using Ezac.Roster.Infrastructure.Data
+@using Ezac.Roster.Domain.Models
+@using Ezac.Roster.Domain.Interfaces.Services
+@using Ezac.Roster.Domain.Entities
+@rendermode InteractiveServer
+
+
+@inject ICalendarService CalendarService
+@inject NavigationManager Navigation
+
+<h3>CalendarList</h3>
+
+
+
 
 @code {
+    private List<ApplicationCalendar> calendars;
 
+    protected override async Task OnInitializedAsync()
+    {
+        var calendarResult = await CalendarService.GetAllAsync();
+
+        if (calendarResult.IsSucces)
+        {
+            calendars = calendarResult.Value.ToList();
+        }
+    }
 }
