Add method to navigate to update calendar page #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -45,4 +45,9 @@
             calendars = calendarResult.Value.ToList();
         }
     }
+
+    private void UpdateCalendar(Guid calendarId)
+    {
+        Navigation.NavigateTo($"calendar/{calendarId.Id}");
+    }
 }
