--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -48,6 +48,11 @@
 
     private void UpdateCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendar/{calendarId.Id}");
+        Navigation.NavigateTo($"calendarupdate/{calendarId.Id}");
+    }
+
+    private void DeleteCalendar(Guid calendarId)
+    {
+        Navigation.NavigateTo($"calendardelete/{calendarId.Id}");
     }
 }
