--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -18,6 +18,7 @@
             <tr>
                 <th>Naam</th>
                 <th>Jaar</th>
+                <th>Acties</th>
             </tr>
         </thead>
         <tbody>
@@ -48,11 +49,11 @@
 
     private void UpdateCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendarupdate/{calendarId.Id}");
+        Navigation.NavigateTo($"calendarupdate/{calendarId}");
     }
 
     private void DeleteCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendardelete/{calendarId.Id}");
+        Navigation.NavigateTo($"calendardelete/{calendarId}");
     }
 }
