--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -27,6 +27,9 @@
                 <tr>
                     <td>@calendar.Name</td>
                     <td>@calendar.Start @calendar.End</td>
+                    <td>
+                        <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">Update</button>
+                    </td>
                 </tr>
             }
         </tbody>
