--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -29,6 +29,7 @@
                     <td>@calendar.Start @calendar.End</td>
                     <td>
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">Update</button>
+                        <button class="btn btn-danger btn-sm" @onclick="() => DeleteCalendar(calendar.Id)">Delete</button>
                     </td>
                 </tr>
             }
